--- a/CSS-Basic/grid/Grid.html
+++ b/CSS-Basic/grid/Grid.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Grid</title>
   </head>
   <body>
     <div style="display: grid; grid-template-columns: 100px 100px">
