--- a/CSS-Basic/youtube-frontpage/youtube.html
+++ b/CSS-Basic/youtube-frontpage/youtube.html
@@ -10,12 +10,114 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="general.css" />
+    <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="sidebar.css" />
     <link rel="stylesheet" href="youtube.css" />
   </head>
   <body>
-    <div>
-      <input type="text" placeholder="Search" class="search-bar" />
-      <button>&#128269;</button>
+    <div class="header">
+      <div class="left-header">
+        <img
+          class="hamburger-menu"
+          src="./images/icons/hamburger-menu.svg"
+          alt="menu"
+        />
+        <img
+          class="youtube-logo"
+          src="./images/icons/youtube-logo.svg"
+          alt="youtube-logo"
+        />
+      </div>
+      <div class="middle-header">
+        <input type="text" placeholder="Search" class="search-bar" />
+        <button class="search-button">
+          <img
+            class="search-icon"
+            src="./images/icons/search.svg"
+            alt="search"
+          />
+        </button>
+        <button class="voice-search-button">
+          <img
+            class="voice-search-icon"
+            src="./images/icons/voice-search-icon.svg"
+            alt="voice-search"
+          />
+        </button>
+      </div>
+      <div class="right-header">
+        <img
+          class="upload-icon"
+          src="./images/icons/upload.svg"
+          alt="upload-icon"
+        />
+        <img
+          class="app-icon"
+          src="./images/icons/youtube-apps.svg"
+          alt="app-icon"
+        />
+        <div class="notification-icon-container">
+          <img
+            class="notification-icon"
+            src="./images/icons/notifications.svg"
+            alt="notification-icon"
+          />
+          <div class="notification-count">3</div>
+        </div>
+        <img
+          class="my-channel-image"
+          src="./images/avatars/my-channel.jpeg"
+          alt="my-channel-image"
+        />
+      </div>
+    </div>
+
+    <div class="sidebar">
+      <div>
+        <img class="home-icon" src="./images/icons/home.svg" alt="home-icon" />
+        <p>Home</p>
+      </div>
+      <div>
+        <img
+          class="explore-icon"
+          src="./images/icons/explore.svg"
+          alt="explore-icon"
+        />
+        <p>Explore</p>
+      </div>
+      <div>
+        <img
+          class="subscriptions-icon"
+          src="./images/icons/subscriptions.svg"
+          alt="subscriptions-icon"
+        />
+        <p>Subscription</p>
+      </div>
+      <div>
+        <img
+          class="originals-icon"
+          src="./images/icons/originals.svg"
+          alt="originals-icon"
+        />
+        <p>Originals</p>
+      </div>
+      <div>
+        <img
+          class="youtube-music-icon"
+          src="./images/icons/youtube-music.svg"
+          alt="youtube-music-icon"
+        />
+        <p>Youtube Music</p>
+      </div>
+      <div>
+        <img
+          class="library-icon"
+          src="./images/icons/library.svg"
+          alt="library-icon"
+        />
+        <p>Library</p>
+      </div>
     </div>
 
     <div class="video-grid">
@@ -26,6 +128,7 @@
             src="./images/thumbnails/thumbnail-1.webp"
             alt="video1"
           />
+          <div class="video-time">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -52,6 +155,7 @@
             src="./images/thumbnails/thumbnail-2.webp"
             alt="video1"
           />
+          <div class="video-time">8:22</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -76,6 +180,7 @@
             src="./images/thumbnails/thumbnail-3.webp"
             alt="video1"
           />
+          <div class="video-time">9:13</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -102,6 +207,7 @@
             src="./images/thumbnails/thumbnail-4.webp"
             alt="video1"
           />
+          <div class="video-time">22:09</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -128,6 +234,7 @@
             src="./images/thumbnails/thumbnail-5.webp"
             alt="video1"
           />
+          <div class="video-time">11:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
@@ -154,6 +261,165 @@
             src="./images/thumbnails/thumbnail-6.webp"
             alt="video1"
           />
+          <div class="video-time">19:59</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-6.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Anything You Can Fit In The Circle I’ll Pay For
+            </p>
+            <p class="video-author">MrBeast</p>
+            <p class="video-stats">141M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-7.webp"
+            alt="video1"
+          />
+          <div class="video-time">10:13</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-7.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Why Planes Don't Fly Over Tibet</p>
+            <p class="video-author">RealLifeLore</p>
+            <p class="video-stats">6.6M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-2.webp"
+            alt="video1"
+          />
+          <div class="video-time">8:22</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-2.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">Try Not To Laugh Challenge #9</p>
+            <p class="video-author">Markiplier</p>
+            <p class="video-stats">19M views &#183; 4 years ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-3.webp"
+            alt="video1"
+          />
+          <div class="video-time">9:13</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-3.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Crazy Tik Toks Taken Moments Before DISASTER
+            </p>
+            <p class="video-author">SSSniperWolf</p>
+            <p class="video-stats">12M views &#183; 1 year ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-4.webp"
+            alt="video1"
+          />
+          <div class="video-time">22:09</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-4.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+            </p>
+            <p class="video-author">Veritasium</p>
+            <p class="video-stats">18M views &#183; 4 months ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-5.webp"
+            alt="video1"
+          />
+          <div class="video-time">11:17</div>
+        </div>
+        <div class="video-info-grid">
+          <div class="channel-picture">
+            <img
+              src="./images/avatars/channel-5.jpeg"
+              alt="avatar1"
+              class="profile-picture"
+            />
+          </div>
+          <div class="video-info">
+            <p class="video-title">
+              Kadane's Algorithm to Maximum Sum Subarray Problem
+            </p>
+            <p class="video-author">CS Dojo</p>
+            <p class="video-stats">519K views &#183; 5 years ago</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="video-preview">
+        <div class="thumbnail-row">
+          <img
+            class="thumbnail"
+            src="./images/thumbnails/thumbnail-6.webp"
+            alt="video1"
+          />
+          <div class="video-time">19:59</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
