--- a/CSS-Basic/youtube-frontpage/youtube.html
+++ b/CSS-Basic/youtube-frontpage/youtube.html
@@ -37,6 +37,7 @@
             src="./images/icons/search.svg"
             alt="search"
           />
+          <div class="tooltip">Search</div>
         </button>
         <button class="voice-search-button">
           <img
@@ -44,19 +45,26 @@
             src="./images/icons/voice-search-icon.svg"
             alt="voice-search"
           />
+          <div class="tooltip">Voice search</div>
         </button>
       </div>
       <div class="right-header">
-        <img
-          class="upload-icon"
-          src="./images/icons/upload.svg"
-          alt="upload-icon"
-        />
-        <img
-          class="app-icon"
-          src="./images/icons/youtube-apps.svg"
-          alt="app-icon"
-        />
+        <div class="upload-icon-container">
+          <img
+            class="upload-icon"
+            src="./images/icons/upload.svg"
+            alt="upload-icon"
+          />
+          <div class="tooltip">Create</div>
+        </div>
+        <div class="app-icon-container">
+          <img
+            class="app-icon"
+            src="./images/icons/youtube-apps.svg"
+            alt="app-icon"
+          />
+          <div class="tooltip">Youtube apps</div>
+        </div>
         <div class="notification-icon-container">
           <img
             class="notification-icon"
@@ -64,6 +72,7 @@
             alt="notification-icon"
           />
           <div class="notification-count">3</div>
+          <div class="tooltip">Notifications</div>
         </div>
         <img
           class="my-channel-image"
@@ -74,49 +83,49 @@
     </div>
 
     <div class="sidebar">
-      <div>
+      <div class="sidebar-link">
         <img class="home-icon" src="./images/icons/home.svg" alt="home-icon" />
-        <p>Home</p>
+        <div>Home</div>
       </div>
-      <div>
+      <div class="sidebar-link">
         <img
           class="explore-icon"
           src="./images/icons/explore.svg"
           alt="explore-icon"
         />
-        <p>Explore</p>
-      </div>
-      <div>
+        <div>Explore</div>
+      </div class="sidebar-link">
+      <div class="sidebar-link">
         <img
           class="subscriptions-icon"
           src="./images/icons/subscriptions.svg"
           alt="subscriptions-icon"
         />
-        <p>Subscription</p>
+        <div>Subscriptions</div>
       </div>
-      <div>
+      <div class="sidebar-link">
         <img
           class="originals-icon"
           src="./images/icons/originals.svg"
           alt="originals-icon"
         />
-        <p>Originals</p>
+        <div>Originals</div>
       </div>
-      <div>
+      <div class="sidebar-link">
         <img
           class="youtube-music-icon"
           src="./images/icons/youtube-music.svg"
           alt="youtube-music-icon"
         />
-        <p>Youtube Music</p>
+        <div>Youtube Music</div>
       </div>
-      <div>
+      <div class="sidebar-link">
         <img
           class="library-icon"
           src="./images/icons/library.svg"
           alt="library-icon"
         />
-        <p>Library</p>
+        <div>Library</div>
       </div>
     </div>
 
@@ -310,23 +319,25 @@
         <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="./images/thumbnails/thumbnail-2.webp"
+            src="./images/thumbnails/thumbnail-8.webp"
             alt="video1"
           />
-          <div class="video-time">8:22</div>
+          <div class="video-time">7:12</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img
-              src="./images/avatars/channel-2.jpeg"
+              src="./images/avatars/channel-8.jpeg"
               alt="avatar1"
               class="profile-picture"
             />
           </div>
           <div class="video-info">
-            <p class="video-title">Try Not To Laugh Challenge #9</p>
-            <p class="video-author">Markiplier</p>
-            <p class="video-stats">19M views &#183; 4 years ago</p>
+            <p class="video-title">
+              Inside The World's Biggest Passenger Plane
+            </p>
+            <p class="video-author">Tech Vision</p>
+            <p class="video-stats">13.7M views &#183; 10 months ago</p>
           </div>
         </div>
       </div>
@@ -335,25 +346,23 @@
         <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="./images/thumbnails/thumbnail-3.webp"
+            src="./images/thumbnails/thumbnail-9.webp"
             alt="video1"
           />
-          <div class="video-time">9:13</div>
+          <div class="video-time">13:17</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img
-              src="./images/avatars/channel-3.jpeg"
+              src="./images/avatars/channel-9.jpeg"
               alt="avatar1"
               class="profile-picture"
             />
           </div>
           <div class="video-info">
-            <p class="video-title">
-              Crazy Tik Toks Taken Moments Before DISASTER
-            </p>
-            <p class="video-author">SSSniperWolf</p>
-            <p class="video-stats">12M views &#183; 1 year ago</p>
+            <p class="video-title">The SECRET to Super Human STRENGTH</p>
+            <p class="video-author">ThenX</p>
+            <p class="video-stats">20M views &#183; 3 years ago</p>
           </div>
         </div>
       </div>
@@ -362,25 +371,25 @@
         <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="./images/thumbnails/thumbnail-4.webp"
+            src="./images/thumbnails/thumbnail-10.webp"
             alt="video1"
           />
-          <div class="video-time">22:09</div>
+          <div class="video-time">7:53</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img
-              src="./images/avatars/channel-4.jpeg"
+              src="./images/avatars/channel-10.jpeg"
               alt="avatar1"
               class="profile-picture"
             />
           </div>
           <div class="video-info">
             <p class="video-title">
-              The Simplest Math Problem No One Can Solve - Collatz Conjecture
+              How The World's Largest Cruise Ship Makes 30,000 Meals Every Day
             </p>
-            <p class="video-author">Veritasium</p>
-            <p class="video-stats">18M views &#183; 4 months ago</p>
+            <p class="video-author">Business Insider</p>
+            <p class="video-stats">14M views &#183; 1 year ago</p>
           </div>
         </div>
       </div>
@@ -389,25 +398,25 @@
         <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="./images/thumbnails/thumbnail-5.webp"
+            src="./images/thumbnails/thumbnail-11.webp"
             alt="video1"
           />
-          <div class="video-time">11:17</div>
+          <div class="video-time">4:10</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img
-              src="./images/avatars/channel-5.jpeg"
+              src="./images/avatars/channel-11.jpeg"
               alt="avatar1"
               class="profile-picture"
             />
           </div>
           <div class="video-info">
             <p class="video-title">
-              Kadane's Algorithm to Maximum Sum Subarray Problem
+              Dubai's Crazy Underwater Train and Other Things #Only in Dubai
             </p>
-            <p class="video-author">CS Dojo</p>
-            <p class="video-stats">519K views &#183; 5 years ago</p>
+            <p class="video-author">Destination Tips</p>
+            <p class="video-stats">3M views &#183; 1 year ago</p>
           </div>
         </div>
       </div>
@@ -416,25 +425,25 @@
         <div class="thumbnail-row">
           <img
             class="thumbnail"
-            src="./images/thumbnails/thumbnail-6.webp"
+            src="./images/thumbnails/thumbnail-12.webp"
             alt="video1"
           />
-          <div class="video-time">19:59</div>
+          <div class="video-time">4:51</div>
         </div>
         <div class="video-info-grid">
           <div class="channel-picture">
             <img
-              src="./images/avatars/channel-6.jpeg"
+              src="./images/avatars/channel-12.jpeg"
               alt="avatar1"
               class="profile-picture"
             />
           </div>
           <div class="video-info">
             <p class="video-title">
-              Anything You Can Fit In The Circle I’ll Pay For
+              What would happen if you didn’t drink water? - Mia Nacamulli
             </p>
-            <p class="video-author">MrBeast</p>
-            <p class="video-stats">141M views &#183; 1 year ago</p>
+            <p class="video-author">TED-Ed</p>
+            <p class="video-stats">12M views &#183; 5 years ago</p>
           </div>
         </div>
       </div>
