--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -13,16 +13,10 @@
     />
 
     <title>Frontend Mentor | QR code component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
       body {
         background-color: rgb(229, 232, 245);
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        position: relative;
+        justify-items: center;
       }
       .container {
         background-color: white;
@@ -59,8 +53,7 @@
       }
 
       .attribution {
-        position: absolute;
-        bottom: -300px;
+        margin: 150px 0px;
         font-size: 11px;
         text-align: center;
       }
@@ -85,7 +78,8 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Hung Nguyen</a>.
+      >. Coded by
+      <a href="https://portfolio-2024-59zr.vercel.app/">Hung Nguyen</a>.
     </div>
   </body>
 </html>
